# fastaconvtr

./: CMakeLists.txt  README.md  fastaconvtr_help.txt  run_examples_fastaconvtr.sh
Examples/: 100Kallchr.tfa.index  100Kallchr07.tfa.index  100Kallchr08.tfa.index  100Kallchr10i14.tfa.index  100Kallchr12i14.tfa.index  100Kallchr_criteria_max.gff  100Kchr10.tfa.index  100Kchr1012_tfa2fa_04.fa  100Kchr1012_tfa2fa_04.fa_chr10.fa  100Kchr10_WEIGHTs_fa2fa_02.txt.index  100Kchr10_WEIGHTs_fa2ms_13.txt.index  100Kchr10_WEIGHTs_fa2tfa_02.txt.index  100Kchr10_WEIGHTs_fa2tfa_08.txt.index  100Kchr10_WEIGHTs_tfa2fa_05.txt.index  100Kchr10_WEIGHTs_tfa2tfa_03c.txt.index  100Kchr10_WEIGHTs_tfa2tfa_07.txt.index  100Kchr10_fa2fa_01.fa  100Kchr10_fa2fa_01B.fa  100Kchr10_fa2fa_02.fa  100Kchr10_fa2fa_02B.fa  100Kchr10_fa2fa_02B.fa_npops1_nsam42_nonsynonymous_max_ExcludeMissingVariantsmhits_NOoutg_ploidy1_WEIGHTS.index  100Kchr10_fa2fa_03.fa  100Kchr10_fa2fa_03B.fa  100Kchr10_fa2fa_04.fa  100Kchr10_fa2fa_04.fachr10_win_0.fas  100Kchr10_fa2fa_04.fachr10_win_4.fas  100Kchr10_fa2fa_05.fa  100Kchr10_fa2fa_06.fa  100Kchr10_fa2fa_07.fa  100Kchr10_fa2ms_01.ms.txt  100Kchr10_fa2ms_02.ms.txt  100Kchr10_fa2ms_03.ms.txt  100Kchr10_fa2ms_03B.ms.txt  100Kchr10_fa2ms_04.ms.txt  100Kchr10_fa2ms_04b.ms.txt  100Kchr10_fa2ms_05.ms.txt  100Kchr10_fa2ms_06.ms.txt  100Kchr10_fa2ms_06b.ms.txt  100Kchr10_fa2ms_07.ms.txt  100Kchr10_fa2ms_08.ms.txt  (+54 more)
sources/: .cproject  .project  common.h  get_obsdatastats.c  main_fasta2ms2.c  main_fasta2ms2.h  read_fasta.c  read_fasta.h  usegff2.c  usegff2.h  write_ms.c  zindex.h
